--- a/sponsors.html
+++ b/sponsors.html
@@ -21,31 +21,21 @@
       margin-top:18px;
       margin-bottom:22px;
     }
+
+    /* Чистий бейдж без кружечка SC */
     .sponsors-kicker{
       display:inline-flex;
       align-items:center;
-      gap:8px;
-      padding:4px 11px;
+      justify-content:center;
+      padding:5px 16px;
       border-radius:999px;
       font-size:.8rem;
-      letter-spacing:.16em;
+      letter-spacing:.18em;
       text-transform:uppercase;
       background:rgba(0,0,0,.45);
       border:1px solid rgba(248,250,252,.18);
       color:#e5e7eb;
       margin-bottom:10px;
-    }
-    .sponsors-kicker span{
-      display:inline-flex;
-      align-items:center;
-      justify-content:center;
-      width:18px;
-      height:18px;
-      border-radius:50%;
-      background:linear-gradient(135deg,#f6c34c,#cc6a2b);
-      color:#000;
-      font-weight:800;
-      font-size:.7rem;
     }
 
     .page-title{
@@ -221,7 +211,7 @@
       background:rgba(15,23,42,.9);
       border:1px solid rgba(148,163,184,.5);
       color:#e5e7eb;
-      opacity:.0;
+      opacity:0;
       transform:translateY(-4px);
       transition:opacity .18s ease, transform .18s ease;
     }
@@ -271,10 +261,10 @@
     <!-- HERO -->
     <div class="sponsors-hero">
       <div class="sponsors-kicker">
-        <span>SC</span> Партнери турніру
+        ПАРТНЕРИ ТУРНІРУ
       </div>
       <h1 class="page-title title-gradient">
-        <span>Спонсори</span>
+        <span>СПОНСОРИ</span>
         <span>STOLAR CARP</span>
       </h1>
       <p class="sponsors-lead">
@@ -330,7 +320,7 @@
 <footer class="footer">
   <div class="container footer__row">
     <div>© 2025 STOLAR CARP · Львів</div>
-    <div class="footer__links">
+    <div class=".footer__links">
       <a href="https://invite.viber.com/?g=8R04gUEhdVSnX6sr_DxGGGqAXTus0Ygh">Viber</a>
       <a href="https://youtube.com/@dk-stolarcarp?si=H-BUK2msCiKXdcA9">YouTube</a>
     </div>
