--- a/events/season-2026.html
+++ b/events/season-2026.html
@@ -1,1 +1,140 @@
+<!doctype html>
+<html lang="uk">
+<head>
+  <meta charset="utf-8">
+  <base href="../">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Сезон 2026 — STOLAR CARP</title>
 
+  <link rel="stylesheet" href="assets/css/main.css">
+  <script defer src="assets/js/config.js"></script>
+
+  <style>
+    body{background:radial-gradient(circle at top,#1f2937 0,#05060a 55%)}
+
+    .season-hero{text-align:center;margin-top:26px}
+    .season-title{font-size:clamp(28px,5vw,42px);font-weight:900}
+    .season-lead{margin-top:10px;color:#cbd5e1;font-size:.95rem}
+
+    .stages-grid{
+      margin-top:30px;
+      display:grid;
+      gap:18px;
+      grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
+    }
+
+    .stage-card{
+      background:radial-gradient(circle at top,#1e293b 0,#020617 60%);
+      border-radius:18px;
+      border:1px solid rgba(148,163,184,.35);
+      box-shadow:0 14px 34px rgba(0,0,0,.8);
+      padding:18px;
+      color:#fff;
+      display:flex;
+      flex-direction:column;
+      justify-content:space-between;
+    }
+
+    .stage-card b{color:#facc15}
+    .stage-desc{font-size:.9rem;color:#cbd5f5;margin-top:8px}
+
+    .stage-links{margin-top:14px;display:flex;gap:8px;flex-wrap:wrap}
+    .stage-btn{
+      padding:8px 14px;
+      border-radius:10px;
+      background:#facc15;
+      color:#111;
+      font-weight:700;
+      text-decoration:none;
+      font-size:.85rem;
+    }
+  </style>
+</head>
+
+<body>
+<header class="header">
+  <div class="container header__row">
+    <a class="logo" href="index.html">
+      <span class="logo__mark">SC</span>
+      <span class="logo__text">STOLAR CARP</span>
+    </a>
+
+    <nav class="nav" id="nav">
+      <a href="events/index.html" class="nav__link">Архів</a>
+      <a href="rating.html?season=2026" class="nav__link">Рейтинг</a>
+    </nav>
+  </div>
+</header>
+
+<main class="main">
+  <section class="container section season-hero">
+    <h1 class="season-title title-gradient">Сезон STOLAR CARP 2026</h1>
+    <p class="season-lead">5 етапів + Фінал. Повний архів результатів.</p>
+
+    <div class="stages-grid">
+
+      <div class="stage-card">
+        <b>I ЕТАП</b>
+        <div class="stage-desc">📍 Лелехівка</div>
+        <div class="stage-links">
+          <a class="stage-btn" href="live.html?stage=2026-e1">Зважування</a>
+          <a class="stage-btn" href="rating.html?season=2026#e1">Результати</a>
+        </div>
+      </div>
+
+      <div class="stage-card">
+        <b>II ЕТАП</b>
+        <div class="stage-desc">📍 Лелехівка</div>
+        <div class="stage-links">
+          <a class="stage-btn" href="live.html?stage=2026-e2">Зважування</a>
+          <a class="stage-btn" href="rating.html?season=2026#e2">Результати</a>
+        </div>
+      </div>
+
+      <div class="stage-card">
+        <b>III ЕТАП</b>
+        <div class="stage-desc">📍 Лелехівка</div>
+        <div class="stage-links">
+          <a class="stage-btn" href="live.html?stage=2026-e3">Зважування</a>
+          <a class="stage-btn" href="rating.html?season=2026#e3">Результати</a>
+        </div>
+      </div>
+
+      <div class="stage-card">
+        <b>IV ЕТАП</b>
+        <div class="stage-desc">📍 Лелехівка</div>
+        <div class="stage-links">
+          <a class="stage-btn" href="live.html?stage=2026-e4">Зважування</a>
+          <a class="stage-btn" href="rating.html?season=2026#e4">Результати</a>
+        </div>
+      </div>
+
+      <div class="stage-card">
+        <b>V ЕТАП</b>
+        <div class="stage-desc">📍 Лелехівка</div>
+        <div class="stage-links">
+          <a class="stage-btn" href="live.html?stage=2026-e5">Зважування</a>
+          <a class="stage-btn" href="rating.html?season=2026#e5">Результати</a>
+        </div>
+      </div>
+
+      <div class="stage-card">
+        <b>ФІНАЛ</b>
+        <div class="stage-desc">🏆 ТОП команд сезону</div>
+        <div class="stage-links">
+          <a class="stage-btn" href="live.html?stage=2026-final">Зважування</a>
+          <a class="stage-btn" href="rating.html?season=2026">Фінальний рейтинг</a>
+        </div>
+      </div>
+
+    </div>
+  </section>
+</main>
+
+<footer class="footer">
+  <div class="container footer__row">
+    <div>© STOLAR CARP 2026</div>
+  </div>
+</footer>
+</body>
+</html>
