--- a/events/season-2026.html
+++ b/events/season-2026.html
@@ -4,137 +4,251 @@
   <meta charset="utf-8">
   <base href="../">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Сезон 2026 — STOLAR CARP</title>
+  <title>Сезон 2026 — Архів | STOLAR CARP</title>
 
   <link rel="stylesheet" href="assets/css/main.css">
   <script defer src="assets/js/config.js"></script>
 
   <style>
-    body{background:radial-gradient(circle at top,#1f2937 0,#05060a 55%)}
+    body{
+      background:radial-gradient(circle at top,#1f2937 0,#05060a 55%);
+    }
+    .section--narrow{max-width:1100px;margin:0 auto}
 
-    .season-hero{text-align:center;margin-top:26px}
-    .season-title{font-size:clamp(28px,5vw,42px);font-weight:900}
-    .season-lead{margin-top:10px;color:#cbd5e1;font-size:.95rem}
+    .season-hero{text-align:center;margin-top:20px}
+    .season-kicker{
+      display:inline-flex;padding:6px 16px;border-radius:999px;
+      background:rgba(0,0,0,.45);border:1px solid rgba(255,255,255,.2);
+      letter-spacing:.18em;font-size:.8rem;text-transform:uppercase;color:#e5e7eb
+    }
+
+    .page-title span{display:block}
+    .page-title span:nth-child(1){
+      font-size:clamp(24px,3.6vw,30px);
+      letter-spacing:.08em;text-transform:uppercase
+    }
+    .page-title span:nth-child(2){
+      font-size:clamp(30px,4.8vw,42px);
+      font-weight:900
+    }
+
+    .season-lead{
+      max-width:780px;margin:10px auto 0;color:#d1d5db;font-size:.95rem
+    }
+
+    .timeline{margin:22px auto 0;max-width:720px}
+    .timeline-rail{
+      height:8px;border-radius:999px;
+      background:linear-gradient(90deg,#facc15,#fb923c,#ef4444)
+    }
+    .timeline-marks{
+      display:flex;justify-content:space-between;margin-top:8px;
+      font-size:.8rem;text-transform:uppercase;color:#e5e7eb
+    }
+
+    .season-layout{
+      margin-top:28px;display:grid;gap:22px;
+      grid-template-columns:2fr 1fr
+    }
+    @media(max-width:980px){.season-layout{grid-template-columns:1fr}}
+
+    .panel{
+      background:#101118;border-radius:18px;padding:16px;
+      border:1px solid rgba(148,163,184,.35);
+      box-shadow:0 18px 40px rgba(0,0,0,.75)
+    }
 
     .stages-grid{
-      margin-top:30px;
-      display:grid;
-      gap:18px;
-      grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
+      margin-top:14px;display:grid;gap:14px;
+      grid-template-columns:repeat(auto-fit,minmax(240px,1fr))
     }
 
     .stage-card{
+      border-radius:16px;padding:14px;
       background:radial-gradient(circle at top,#1e293b 0,#020617 60%);
-      border-radius:18px;
-      border:1px solid rgba(148,163,184,.35);
-      box-shadow:0 14px 34px rgba(0,0,0,.8);
-      padding:18px;
-      color:#fff;
-      display:flex;
-      flex-direction:column;
-      justify-content:space-between;
+      border:1px solid rgba(51,65,85,.9)
     }
 
-    .stage-card b{color:#facc15}
-    .stage-desc{font-size:.9rem;color:#cbd5f5;margin-top:8px}
+    .stage-kicker{
+      display:inline-flex;gap:6px;padding:4px 10px;
+      border-radius:999px;border:1px solid rgba(148,163,184,.6);
+      font-size:.78rem;text-transform:uppercase
+    }
 
-    .stage-links{margin-top:14px;display:flex;gap:8px;flex-wrap:wrap}
+    .stage-title{margin:8px 0 4px;font-weight:700}
+    .stage-meta{font-size:.88rem;color:#e5e7eb;opacity:.85}
+    .stage-desc{margin-top:6px;font-size:.88rem;color:#cbd5f5}
+
+    .stage-links{margin-top:10px;display:flex;gap:8px;flex-wrap:wrap}
     .stage-btn{
-      padding:8px 14px;
-      border-radius:10px;
-      background:#facc15;
-      color:#111;
-      font-weight:700;
-      text-decoration:none;
-      font-size:.85rem;
+      padding:7px 12px;border-radius:10px;
+      text-decoration:none;font-size:.85rem;font-weight:600
     }
+    .stage-btn--primary{background:#facc15;color:#1a1a1d}
+    .stage-btn--ghost{
+      background:rgba(15,23,42,.9);
+      color:#e5e7eb;border:1px solid rgba(148,163,184,.6)
+    }
+
+    .aside-item{display:flex;align-items:center;gap:8px;margin:8px 0}
+    .bullet{width:10px;height:10px;border-radius:50%;background:#facc15}
   </style>
 </head>
 
 <body>
+
 <header class="header">
   <div class="container header__row">
     <a class="logo" href="index.html">
       <span class="logo__mark">SC</span>
       <span class="logo__text">STOLAR CARP</span>
     </a>
-
     <nav class="nav" id="nav">
-      <a href="events/index.html" class="nav__link">Архів</a>
-      <a href="rating.html?season=2026" class="nav__link">Рейтинг</a>
+      <a href="index.html" class="nav__link">Головна</a>
+      <a href="rules.html" class="nav__link">Регламент</a>
+      <a href="rating.html" class="nav__link">Рейтинг</a>
+      <a href="lakes.html" class="nav__link">Водойми</a>
+      <a href="sponsors.html" class="nav__link">Спонсори</a>
+      <a href="events/season-2026.html" class="nav__link nav__link--active">Архів</a>
     </nav>
+    <button class="burger" id="burger"><span></span><span></span><span></span></button>
   </div>
 </header>
 
 <main class="main">
-  <section class="container section season-hero">
-    <h1 class="season-title title-gradient">Сезон STOLAR CARP 2026</h1>
-    <p class="season-lead">5 етапів + Фінал. Повний архів результатів.</p>
 
-    <div class="stages-grid">
+<!-- HERO -->
+<section class="container section section--narrow season-hero">
+  <div class="season-kicker">АРХІВ СЕЗОНУ</div>
+  <h1 class="page-title title-gradient">
+    <span>STOLAR CARP</span>
+    <span>СЕЗОН 2026</span>
+  </h1>
+  <p class="season-lead">
+    Повний архів сезону STOLAR CARP 2026: п’ять етапів та фінал сезону.
+    Тут збережені всі підсумкові результати та протоколи зважувань.
+  </p>
 
-      <div class="stage-card">
-        <b>I ЕТАП</b>
-        <div class="stage-desc">📍 Лелехівка</div>
-        <div class="stage-links">
-          <a class="stage-btn" href="live.html?stage=2026-e1">Зважування</a>
-          <a class="stage-btn" href="rating.html?season=2026#e1">Результати</a>
-        </div>
-      </div>
-
-      <div class="stage-card">
-        <b>II ЕТАП</b>
-        <div class="stage-desc">📍 Лелехівка</div>
-        <div class="stage-links">
-          <a class="stage-btn" href="live.html?stage=2026-e2">Зважування</a>
-          <a class="stage-btn" href="rating.html?season=2026#e2">Результати</a>
-        </div>
-      </div>
-
-      <div class="stage-card">
-        <b>III ЕТАП</b>
-        <div class="stage-desc">📍 Лелехівка</div>
-        <div class="stage-links">
-          <a class="stage-btn" href="live.html?stage=2026-e3">Зважування</a>
-          <a class="stage-btn" href="rating.html?season=2026#e3">Результати</a>
-        </div>
-      </div>
-
-      <div class="stage-card">
-        <b>IV ЕТАП</b>
-        <div class="stage-desc">📍 Лелехівка</div>
-        <div class="stage-links">
-          <a class="stage-btn" href="live.html?stage=2026-e4">Зважування</a>
-          <a class="stage-btn" href="rating.html?season=2026#e4">Результати</a>
-        </div>
-      </div>
-
-      <div class="stage-card">
-        <b>V ЕТАП</b>
-        <div class="stage-desc">📍 Лелехівка</div>
-        <div class="stage-links">
-          <a class="stage-btn" href="live.html?stage=2026-e5">Зважування</a>
-          <a class="stage-btn" href="rating.html?season=2026#e5">Результати</a>
-        </div>
-      </div>
-
-      <div class="stage-card">
-        <b>ФІНАЛ</b>
-        <div class="stage-desc">🏆 ТОП команд сезону</div>
-        <div class="stage-links">
-          <a class="stage-btn" href="live.html?stage=2026-final">Зважування</a>
-          <a class="stage-btn" href="rating.html?season=2026">Фінальний рейтинг</a>
-        </div>
-      </div>
-
+  <div class="timeline">
+    <div class="timeline-rail"></div>
+    <div class="timeline-marks">
+      <span>I</span><span>II</span><span>III</span>
+      <span>IV</span><span>V</span><span>Фінал</span>
     </div>
-  </section>
+  </div>
+</section>
+
+<section class="container section">
+  <div class="season-layout">
+
+    <!-- ЕТАПИ -->
+    <div class="panel">
+      <h2 class="title-gradient">Етапи сезону</h2>
+
+      <div class="stages-grid">
+
+        <!-- 1 -->
+        <article class="stage-card">
+          <div class="stage-kicker">I ЕТАП</div>
+          <h3 class="stage-title">STOLAR CARP 2026 — Етап I</h3>
+          <div class="stage-meta">📍 Лелехівка</div>
+          <p class="stage-desc">Старт сезону та перші рейтингові бали.</p>
+          <div class="stage-links">
+            <a class="stage-btn stage-btn--primary" href="live.html?archive=2026-e1">Архів зважувань</a>
+            <a class="stage-btn stage-btn--ghost" href="rating.html?season=2026#e1">Результати</a>
+          </div>
+        </article>
+
+        <!-- 2 -->
+        <article class="stage-card">
+          <div class="stage-kicker">II ЕТАП</div>
+          <h3 class="stage-title">STOLAR CARP 2026 — Етап II</h3>
+          <div class="stage-meta">📍 Лелехівка</div>
+          <p class="stage-desc">Загострення боротьби.</p>
+          <div class="stage-links">
+            <a class="stage-btn stage-btn--primary" href="live.html?archive=2026-e2">Архів зважувань</a>
+            <a class="stage-btn stage-btn--ghost" href="rating.html?season=2026#e2">Результати</a>
+          </div>
+        </article>
+
+        <!-- 3 -->
+        <article class="stage-card">
+          <div class="stage-kicker">III ЕТАП</div>
+          <h3 class="stage-title">STOLAR CARP 2026 — Етап III</h3>
+          <div class="stage-meta">📍 Лелехівка</div>
+          <p class="stage-desc">Середина сезону.</p>
+          <div class="stage-links">
+            <a class="stage-btn stage-btn--primary" href="live.html?archive=2026-e3">Архів зважувань</a>
+            <a class="stage-btn stage-btn--ghost" href="rating.html?season=2026#e3">Результати</a>
+          </div>
+        </article>
+
+        <!-- 4 -->
+        <article class="stage-card">
+          <div class="stage-kicker">IV ЕТАП</div>
+          <h3 class="stage-title">STOLAR CARP 2026 — Етап IV</h3>
+          <div class="stage-meta">📍 Лелехівка</div>
+          <p class="stage-desc">Фінішна боротьба.</p>
+          <div class="stage-links">
+            <a class="stage-btn stage-btn--primary" href="live.html?archive=2026-e4">Архів зважувань</a>
+            <a class="stage-btn stage-btn--ghost" href="rating.html?season=2026#e4">Результати</a>
+          </div>
+        </article>
+
+        <!-- 5 -->
+        <article class="stage-card">
+          <div class="stage-kicker">V ЕТАП</div>
+          <h3 class="stage-title">STOLAR CARP 2026 — Етап V</h3>
+          <div class="stage-meta">📍 Лелехівка</div>
+          <p class="stage-desc">Останній відбір перед фіналом.</p>
+          <div class="stage-links">
+            <a class="stage-btn stage-btn--primary" href="live.html?archive=2026-e5">Архів зважувань</a>
+            <a class="stage-btn stage-btn--ghost" href="rating.html?season=2026#e5">Результати</a>
+          </div>
+        </article>
+
+        <!-- ФІНАЛ -->
+        <article class="stage-card">
+          <div class="stage-kicker">ФІНАЛ</div>
+          <h3 class="stage-title">STOLAR CARP FINAL 2026</h3>
+          <div class="stage-meta">📍 Лелехівка</div>
+          <p class="stage-desc">Головна подія сезону.</p>
+          <div class="stage-links">
+            <a class="stage-btn stage-btn--primary" href="live.html?archive=2026-final">Архів зважувань</a>
+            <a class="stage-btn stage-btn--ghost" href="rating.html?season=2026">Фінальний рейтинг</a>
+          </div>
+        </article>
+
+      </div>
+    </div>
+
+    <!-- ПРАВА КОЛОНКА -->
+    <aside class="panel">
+      <h2 class="title-gradient">Архів сезону</h2>
+
+      <div class="aside-item">
+        <span class="bullet"></span>
+        <a href="rating.html?season=2026">Загальний рейтинг сезону</a>
+      </div>
+      <div class="aside-item">
+        <span class="bullet"></span>
+        <a href="rules.html">Регламент сезону</a>
+      </div>
+      <div class="aside-item">
+        <span class="bullet"></span>
+        <span>Наступні сезони: 2027–2030</span>
+      </div>
+    </aside>
+
+  </div>
+</section>
 </main>
 
 <footer class="footer">
   <div class="container footer__row">
-    <div>© STOLAR CARP 2026</div>
+    <div>© 2026 STOLAR CARP · Львівщина</div>
   </div>
 </footer>
+
 </body>
 </html>
