--- a/events/index.html
+++ b/events/index.html
@@ -81,8 +81,11 @@
 </head>
 
 <body>
+
 <header class="header">
   <div class="container header__row">
+
+    <!-- ✅ ЛОГО ВЕДЕ НА ГОЛОВНУ -->
     <a class="logo" href="index.html">
       <span class="logo__mark">SC</span>
       <span class="logo__text">STOLAR CARP</span>
@@ -94,6 +97,8 @@
       <a href="rating.html" class="nav__link">Рейтинг</a>
       <a href="lakes.html" class="nav__link">Водойми</a>
       <a href="sponsors.html" class="nav__link">Спонсори</a>
+
+      <!-- ✅ ТУТ БЕЗ events/ — БО МИ ВЖЕ В НЬОМУ -->
       <a href="events/index.html" class="nav__link nav__link--active">Архів</a>
     </nav>
   </div>
@@ -108,8 +113,8 @@
 
     <div class="seasons-grid">
 
-      <!-- СЕЗОН 2026 -->
-      <a class="season-card" href="season-2026.html">
+      <!-- ✅ СЕЗОН 2026 -->
+      <a class="season-card" href="events/season-2026.html">
         <div>
           <div class="season-year">Сезон 2026</div>
           <div class="season-desc">
@@ -119,7 +124,7 @@
         <div class="season-btn">Відкрити сезон</div>
       </a>
 
-      <!-- МАЙБУТНІ СЕЗОНИ -->
+      <!-- МАЙБУТНІ -->
       <div class="season-card" style="opacity:.4;pointer-events:none">
         <div>
           <div class="season-year">Сезон 2027</div>
@@ -137,5 +142,6 @@
     <div>© STOLAR CARP</div>
   </div>
 </footer>
+
 </body>
 </html>
