--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>STOLAR CARP — офіційний сайт турнірів</title>
+
   <!-- Favicon & App Icon -->
-<link rel="icon" type="image/png" href="assets/favicon.png">
-<link rel="apple-touch-icon" href="assets/favicon.png">
-<meta name="theme-color" content="#1a1a1a">
+  <link rel="icon" type="image/png" href="assets/favicon.png">
+  <link rel="apple-touch-icon" href="assets/favicon.png">
+  <meta name="theme-color" content="#1a1a1a">
 
   <!-- Стилі та скрипт меню -->
   <link rel="stylesheet" href="assets/css/main.css">
@@ -30,7 +31,8 @@
       <a href="rating.html" class="nav__link">Рейтинг</a>
       <a href="lakes.html" class="nav__link">Водойми</a>
       <a href="sponsors.html" class="nav__link">Спонсори</a>
-      <a href="events/turnir-2026.html" class="nav__link">Турнір 2026</a>
+      <!-- 🔁 Було: events/turnir-2026.html / "Турнір 2026" -->
+      <a href="events/index.html" class="nav__link">Архів турнірів</a>
     </nav>
     <button class="burger" id="burger"><span></span><span></span><span></span></button>
   </div>
@@ -61,13 +63,16 @@
       </div>
 
       <div class="card highlight" style="text-align:center">
-      <h2 class="title-gradient">🏆 Турнір STOLAR CARP 2026</h2>
-      <p>Сезон із 5 етапів і Фіналом. Результати та рейтинг оновлюються автоматично.</p>
-      <a href="events/turnir-2026.html" class="btn btn--primary">Переглянути сезон 2026</a>
+        <h2 class="title-gradient">🏆 Сезон STOLAR CARP 2026</h2>
+        <p>Сезон із 5 етапів і Фіналом. Результати та рейтинг оновлюються автоматично.</p>
+        <!-- 🔁 Було: events/turnir-2026.html -->
+        <a href="events/season-2026.html" class="btn btn--primary">
+          Переглянути сезон 2026
+        </a>
       </div>
 
       <hr style="margin:40px 0; opacity:.2">
-      
+
       <div class="card">
         <h3>Благодійність</h3>
         <p>Частину внесків спрямовуємо на підтримку захисників України 🇺🇦</p>
@@ -85,12 +90,10 @@
         <p>Trinity Baits, Flagman, Robin, Puhach Baits, Charbaits, Ібіс, VKK та інші.</p>
       </div>
     </div>
-    
-
   </section>
 </main>
 
-  <!-- TikTok Section -->
+<!-- TikTok Section -->
 <section class="section container highlight" style="text-align:center; padding:60px 0;">
   <h2 class="title-gradient">🎬 Ми в TikTok</h2>
   <p>Дивись короткі відео з наших турнірів, зважувань та нагороджень!</p>
