--- a/lakes.html
+++ b/lakes.html
@@ -215,7 +215,8 @@
       <a href="rating.html" class="nav__link">Рейтинг</a>
       <a href="lakes.html" class="nav__link nav__link--active">Водойми</a>
       <a href="sponsors.html" class="nav__link">Спонсори</a>
-      <a href="events/turnir-2026.html" class="nav__link">Турнір 2026</a>
+      <!-- ✅ Замість "Турнір 2026" -->
+      <a href="events/index.html" class="nav__link">Архів</a>
     </nav>
     <button class="burger" id="burger"><span></span><span></span><span></span></button>
   </div>
@@ -254,8 +255,8 @@
           </div>
           <div class="actions">
             <a class="btn-route" target="_blank" rel="noopener"
-   href="https://www.google.com/maps/search/?api=1&query=49.955633,23.674474">
-  Маршрут на Google Maps
+               href="https://www.google.com/maps/search/?api=1&query=49.955633,23.674474">
+              Маршрут на Google Maps
             </a>
           </div>
         </div>
@@ -276,9 +277,8 @@
           </div>
           <div class="actions">
             <a class="btn-route" target="_blank" rel="noopener"
-            <a class="btn-route" target="_blank" rel="noopener"
                href="https://www.google.com/maps/search/?api=1&query=50.224026,23.944066">
-  Маршрут на Google Maps
+              Маршрут на Google Maps
             </a>
           </div>
         </div>
@@ -288,7 +288,7 @@
       <article class="card lake-card">
         <div class="lake-photo">
           <img src="assets/bounty.jpg" alt="Водойма Bounty" loading="lazy">
-          <span class="lake-label">Bounty</span>
+            <span class="lake-label">Bounty</span>
         </div>
         <div class="lake-body">
           <p>Глибші ділянки, перспективні бровки та високий шанс на Big Fish.
@@ -300,7 +300,7 @@
           <div class="actions">
             <a class="btn-route" target="_blank" rel="noopener"
                href="https://www.google.com/maps/search/?api=1&query=49.989020,23.513452">
-  Маршрут на Google Maps
+              Маршрут на Google Maps
             </a>
           </div>
         </div>
