--- a/register.html
+++ b/register.html
@@ -337,7 +337,7 @@
       <a href="rating.html" class="nav__link">Рейтинг</a>  
       <a href="lakes.html" class="nav__link">Водойми</a>  
       <a href="sponsors.html" class="nav__link">Спонсори</a>  
-      <a href="events/turnir-2026.html" class="nav__link">Турнір 2026</a>  
+      <a href="events/index.html" class="nav__link">Архів</a>  
     </nav>  
     <button class="burger" id="burger"><span></span><span></span><span></span></button>  
   </div>  
