--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <a href="lakes.html" class="nav__link">Водойми</a>
       <a href="sponsors.html" class="nav__link">Спонсори</a>
       <!-- 🔁 Було: events/turnir-2026.html / "Турнір 2026" -->
-      <a href="events/index.html" class="nav__link">Архів турнірів</a>
+      <a href="events/index.html" class="nav__link">Архів </a>
     </nav>
     <button class="burger" id="burger"><span></span><span></span><span></span></button>
   </div>
