--- a/events/index.html
+++ b/events/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Архів турнірів — STOLAR CARP</title>
 
-  <!-- Підключаємо стилі та скрипт з кореня -->
+  <!-- Стилі та скрипт з кореня -->
   <link rel="stylesheet" href="../assets/css/main.css">
   <script defer src="../assets/js/config.js"></script>
 
@@ -140,7 +140,11 @@
 
 <footer class="footer">
   <div class="container footer__row">
-    <div>© STOLAR CARP</div>
+    <div>© 2025 STOLAR CARP · Львів</div>
+    <div class="footer__links">
+      <a href="https://invite.viber.com/?g=8R04gUEhdVSnX6sr_DxGGGqAXTus0Ygh">Viber</a>
+      <a href="https://youtube.com/@dk-stolarcarp?si=H-BUK2msCiKXdcA9">YouTube</a>
+    </div>
   </div>
 </footer>
 </body>
