--- a/index.html
+++ b/index.html
@@ -168,8 +168,9 @@
   <section class="section container hero-main">
 
     <div class="hero-kicker">
-      <span>SC</span> СЕРІЯ КАРПОВИХ ТУРНІРІВ
-    </div>
+  <img src="assets/fish-gold.png" class="hero-fish" alt="Stolar Carp Fish">
+  СЕРІЯ КАРПОВИХ ТУРНІРІВ
+</div>
 
     <h1 class="hero-title">STOLAR CARP</h1>
 
