--- a/index.html
+++ b/index.html
@@ -168,9 +168,9 @@
   <section class="section container hero-main">
 
     <div class="hero-kicker">
-  <img src="assets/fish-gold.png" class="hero-fish" alt="Stolar Carp Fish">
-  СЕРІЯ КАРПОВИХ ТУРНІРІВ
-</div>
+  <img src="assets/fish-gold.png" class="hero-fish" alt="">
+  <span class="hero-kicker-text">СЕРІЯ КАРПОВИХ ТУРНІРІВ</span>
+    </div>
 
     <h1 class="hero-title">STOLAR CARP</h1>
 
