--- a/index.html
+++ b/index.html
@@ -41,18 +41,7 @@
       color:#e5e7eb;
       margin-bottom:14px;
     }
-    .hero-kicker span{
-      width:20px;
-      height:20px;
-      border-radius:50%;
-      display:inline-flex;
-      align-items:center;
-      justify-content:center;
-      font-weight:800;
-      font-size:.8rem;
-      background:linear-gradient(135deg,#f6c34c,#cc6a2b);
-      color:#000;
-    }
+    
 
     .hero-title{
       font-size:clamp(40px,7vw,64px);
@@ -66,6 +55,19 @@
       color:transparent;
     }
 
+  .hero-fish{
+  width:16px;
+  height:16px;
+  object-fit:contain;
+  margin-right:6px;
+  flex-shrink:0;
+}
+
+.hero-kicker-text{
+  font-size:.75rem;
+  letter-spacing:.18em;
+  text-transform:uppercase;
+}
     .hero-subtitle{
       margin:14px auto 0;
       max-width:640px;
