--- a/index.html
+++ b/index.html
@@ -55,12 +55,17 @@
       color:transparent;
     }
 
-  .hero-fish{
-  width:16px;
-  height:16px;
+ .hero-fish{
+  width:34px;
+  height:34px;
+  min-width:34px;
+  min-height:34px;
+  max-width:34px;
+  max-height:34px;
   object-fit:contain;
-  margin-right:6px;
+  margin-right:8px;
   flex-shrink:0;
+  display:block;
 }
 
 .hero-kicker-text{
