--- a/index.html
+++ b/index.html
@@ -41,6 +41,23 @@
       color:#e5e7eb;
       margin-bottom:14px;
     }
+
+    .hero-kicker--fish{
+  position: relative;
+  padding-left: 40px;
+}
+
+.hero-kicker--fish::before{
+  content: "";
+  position: absolute;
+  left: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 22px;
+  height: 22px;
+  border-radius: 50%;
+  background: url('assets/fish-gold.png') center/cover no-repeat;
+}
     
 
     .hero-title{
