--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       border:1px solid rgba(148,163,184,.5);
       color:#e5e7eb;
       margin-bottom:14px;
+      margin-left: 20px;
     }
 
     /* Іконка з рибою зліва в плашці */
