--- a/index.html
+++ b/index.html
@@ -196,8 +196,9 @@
     <h1 class="hero-title">STOLAR CARP</h1>
 
     <p class="hero-subtitle">
-      Преміальна серія коропових змагань у Львівській області.
-      Стабільні водойми, чесний спорт, живі емоції та прозорі онлайн-протоколи.
+      Створено для розвитку сучасного коропового спорту в Україні. Це змагання для тих, 
+      хто цінує чесну боротьбу, сильних суперників і прозорий результат. Тут важлива не одна риба, 
+      а стабільність, витримка та командна робота протягом сезону. Формується новий стандарт турнірів.
     </p>
 
     <div class="hero-tags">
@@ -223,14 +224,14 @@
 
     <div class="hero-meta">
       Локації сезону: Лелехівка · Пристань · Bounty.  
-      Рейтинг команд оновлюється автоматично після кожного зважування.
+      Твій рівень. Твій трофей. Твоя перемога.
     </div>
 
     <div class="hero-season-card">
       <h2 class="title-gradient">🏆 Сезон STOLAR CARP 2026</h2>
       <p>
         Слідкуй за всіма етапами та Фіналом в одному місці.
-        Архів зважувань, Big Fish та підсумковий рейтинг команд.
+        Архів, Big Fish та підсумковий рейтинг команд.
       </p>
       <a href="events/season-2026.html" class="btn btn--primary btn-lg">
         Переглянути сезон 2026
