--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>STOLAR CARP — офіційний сайт турнірів</title>
 
+  <!-- Meta / SEO -->
+  <meta name="description" content="STOLAR CARP — серія турнірів із коропової риболовлі в Україні. 5 етапів + Фінал, live-таблиці, рейтинг команд, прозорий регламент та чесна спортивна боротьба.">
+  <meta property="og:title" content="STOLAR CARP — офіційний сайт турнірів">
+  <meta property="og:description" content="Сезон 2026: 5 етапів + Фінал. Live-протоколи, рейтинг команд, Big Fish та архів подій.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://stolarcarp.netlify.app/">
+  <meta property="og:image" content="https://stolarcarp.netlify.app/assets/og-image.jpg">
+
   <!-- Favicon & App Icon -->
   <link rel="icon" type="image/png" href="assets/favicon.png">
   <link rel="apple-touch-icon" href="assets/favicon.png">
@@ -27,6 +35,24 @@
       text-align:center;
     }
 
+    .hero-kicker-wrap{
+      position:relative;
+      display:inline-block;
+      padding-left:40px; /* місце під рибу */
+      margin-bottom:14px;
+    }
+
+    .hero-fish-overlay{
+      position:absolute;
+      left:-10px;
+      top:50%;
+      transform:translateY(-50%);
+      width:70px;
+      height:70px;
+      z-index:10;
+      pointer-events:none;
+    }
+
     .hero-kicker{
       display:inline-flex;
       align-items:center;
@@ -39,17 +65,6 @@
       background:rgba(0,0,0,.6);
       border:1px solid rgba(148,163,184,.5);
       color:#e5e7eb;
-      margin-bottom:14px;
-      margin-left: 89px;
-    }
-
-    /* Іконка з рибою зліва в плашці */
-    .hero-kicker-icon{
-      width:20px;
-      height:20px;
-      border-radius:50%;
-      flex-shrink:0;
-      background:url('assets/fish-gold.png') center/cover no-repeat;
     }
 
     .hero-kicker-text{
@@ -105,7 +120,6 @@
       font-size:.98rem;
       border-radius:999px;
     }
-    /* акцентна кнопка для реєстрації */
     .btn--accent{
       background:linear-gradient(135deg,#f6c34c,#f28b2b);
       color:#111;
@@ -119,6 +133,12 @@
       margin-top:22px;
       font-size:.88rem;
       color:#9ca3af;
+    }
+
+    .hero-meta a{
+      color:#e5e7eb;
+      text-decoration:underline;
+      text-decoration-style:dotted;
     }
 
     .hero-season-card{
@@ -139,24 +159,80 @@
       font-size:.95rem;
     }
 
+    /* Інформаційні блоки головної */
+    .info-block{
+      max-width:980px;
+      margin:0 auto;
+      padding:40px 0;
+      color:#e5e7eb;
+    }
+
+    .info-text{
+      max-width:720px;
+      margin:12px auto 0;
+      color:#d1d5db;
+      font-size:.98rem;
+    }
+
+    .info-list,
+    .stage-list,
+    .advantages-list{
+      list-style:none;
+      padding:0;
+      margin:20px auto 0;
+      max-width:720px;
+      text-align:left;
+      color:#e5e7eb;
+      font-size:.95rem;
+    }
+
+    .info-list li,
+    .stage-list li,
+    .advantages-list li{
+      padding:6px 0;
+      border-bottom:1px solid rgba(148,163,184,.18);
+    }
+
+    .final-highlight{
+      color:#facc15;
+      font-weight:600;
+    }
+
+    .mission-cards,
+    .lake-cards{
+      margin-top:22px;
+      display:flex;
+      flex-wrap:wrap;
+      gap:12px;
+      justify-content:center;
+    }
+
+    .mission-card,
+    .lake-card{
+      padding:10px 16px;
+      border-radius:14px;
+      border:1px solid rgba(148,163,184,.35);
+      background:rgba(15,23,42,.9);
+      font-size:.9rem;
+    }
+
+    .call-to-action{
+      text-align:center;
+    }
+
+    .section.highlight{
+      text-align:center;
+      padding:60px 0;
+    }
+
     @media (max-width:640px){
       .hero-main{padding:60px 0 40px;}
+      .hero-fish-overlay{
+        width:52px;
+        height:52px;
+        left:-6px;
+      }
     }
-    .hero-kicker-wrap{
-  position: relative;
-  display: inline-block;
-}
-
-.hero-fish-overlay{
-  position: absolute;
-  left: -15px;      /* рибка заходить НА плашку */
-  top: 0%;
-  transform: translateY(-50%);
-  width: 105px;      /* РОЗМІР */
-  height: 105px;
-  z-index: 10;      /* ПОВЕРХ плашки */
-  pointer-events: none;
-}
   </style>
 </head>
 <body class="home-page">
@@ -169,7 +245,7 @@
       <span class="logo__text">STOLAR CARP</span>
     </a>
     <nav class="nav" id="nav">
-      <a href="index.html" class="nav__link nav__link--active">Головна</a>
+      <a href="index.html" class="nav__link nav__link--active" aria-current="page">Головна</a>
       <a href="rules.html" class="nav__link">Регламент</a>
       <a href="register.html" class="nav__link">Реєстрація</a>
       <a href="live.html" class="nav__link">Live</a>
@@ -184,54 +260,56 @@
 
 <!-- MAIN -->
 <main class="main">
+  <!-- HERO -->
   <section class="section container hero-main">
 
     <div class="hero-kicker-wrap">
-  <img src="assets/fish-gold.png" class="hero-fish-overlay" alt="">
-  <div class="hero-kicker">
-    <span class="hero-kicker-text">СЕРІЯ КАРПОВИХ ТУРНІРІВ</span>
-  </div>
+      <img src="assets/fish-gold.png" class="hero-fish-overlay" alt="Логотип STOLAR CARP">
+      <div class="hero-kicker">
+        <span class="hero-kicker-text">СЕРІЯ КАРПОВИХ ТУРНІРІВ</span>
+      </div>
     </div>
 
     <h1 class="hero-title">STOLAR CARP</h1>
 
     <p class="hero-subtitle">
-      Створено для розвитку сучасного коропового спорту в Україні. Це змагання для тих, 
-      хто цінує чесну боротьбу, сильних суперників і прозорий результат. Тут важлива не одна риба, 
-      а стабільність, витримка та командна робота протягом сезону. Формується новий стандарт турнірів.
+      STOLAR CARP — серія турнірів із сучасного коропового спорту в Україні. 
+      Тут немає випадкових перемог: вирішують стабільність, витримка та командна 
+      тактика протягом усього сезону. 5 етапів + Фінал, сильні суперники 
+      та прозорий результат.
     </p>
 
     <div class="hero-tags">
       <span class="hero-tag">Сезон 2026 · 5 етапів + Фінал</span>
       <span class="hero-tag">Зони A · B · C</span>
-      <span class="hero-tag">Live-таблиці та рейтинг онлайн</span>
+      <span class="hero-tag">Live-таблиці та онлайн-рейтинг</span>
     </div>
 
     <div class="hero-cta">
-      <!-- 1. Регламент -->
       <a class="btn btn--primary btn-lg" href="rules.html">
         Переглянути регламент
       </a>
-      <!-- 2. Реєстрація -->
       <a class="btn btn--accent btn-lg" href="register.html">
         Подати заявку
       </a>
-      <!-- 3. Live -->
       <a class="btn btn--danger btn-lg" href="live.html">
         Live протоколи
       </a>
     </div>
 
     <div class="hero-meta">
-      Локації сезону: Лелехівка · Пристань · Bounty.  
+      Локації сезону: 
+      <a href="lakes.html#lelekhivka">Лелехівка</a> · 
+      <a href="lakes.html#prystan">Пристань</a> · 
+      <a href="lakes.html#bounty">Bounty</a>.<br>
       Твій рівень. Твій трофей. Твоя перемога.
     </div>
 
     <div class="hero-season-card">
       <h2 class="title-gradient">🏆 Сезон STOLAR CARP 2026</h2>
       <p>
-        Слідкуй за всіма етапами та Фіналом в одному місці.
-        Архів, Big Fish та підсумковий рейтинг команд.
+        Слідкуй за всіма етапами та Фіналом в одному місці: live-таблиці, Big Fish, 
+        архів результатів і підсумковий рейтинг команд.
       </p>
       <a href="events/season-2026.html" class="btn btn--primary btn-lg">
         Переглянути сезон 2026
@@ -239,13 +317,114 @@
     </div>
 
   </section>
+
+  <!-- ХТО МОЖЕ ВЗЯТИ УЧАСТЬ -->
+  <section class="section container info-block">
+    <h2 class="title-gradient">Хто може взяти участь?</h2>
+    <p class="info-text">
+      STOLAR CARP відкритий для всіх, хто любить коропову риболовлю. 
+      Для участі не обов’язково бути професійним спортсменом — головне бажання боротися чесно 
+      і поважати суперників.
+    </p>
+
+    <ul class="info-list">
+      <li>Команди з 2–3 учасників</li>
+      <li>Аматори, які хочуть пройти свій перший турнір</li>
+      <li>Досвідчені рибалки та спортивні команди</li>
+      <li>Клуби та об’єднання карпятників</li>
+      <li>Ті, хто готовий до сезону з 5 етапів і фінальної битви</li>
+    </ul>
+  </section>
+
+  <!-- МІСІЯ -->
+  <section class="section container info-block">
+    <h2 class="title-gradient">Місія STOLAR CARP</h2>
+    <p class="info-text">
+      Ми створюємо новий стандарт коропових турнірів в Україні: організований, 
+      прозорий та орієнтований на розвиток спільноти. Кожне змагання — це не лише боротьба 
+      за кубок, а й зустріч однодумців на березі водойми.
+    </p>
+
+    <div class="mission-cards">
+      <div class="mission-card">Чесні та зрозумілі правила</div>
+      <div class="mission-card">Сучасний формат та live-таблиці</div>
+      <div class="mission-card">Повага до риби й водойм</div>
+      <div class="mission-card">Розвиток спільноти карпятників</div>
+    </div>
+  </section>
+
+  <!-- СТРУКТУРА СЕЗОНУ -->
+  <section class="section container info-block">
+    <h2 class="title-gradient">Структура сезону</h2>
+    <p class="info-text">
+      Сезон STOLAR CARP складається з 5 рейтингових етапів. 
+      Команди набирають бали на кожному з них, а за підсумком сезону найкращі потрапляють 
+      у Великий Фінал, де і визначається Чемпіон.
+    </p>
+
+    <ul class="stage-list">
+      <li>Етап 1 — старт сезону та перший розподіл сил</li>
+      <li>Етап 2 — тактична боротьба на складніших умовах</li>
+      <li>Етап 3 — середина сезону, боротьба за місце в топі</li>
+      <li>Етап 4 — вирішальні очки перед фінішем</li>
+      <li>Етап 5 — останній шанс потрапити у Фінал</li>
+      <li class="final-highlight">Фінал — битва найкращих команд сезону за титул Чемпіона STOLAR CARP</li>
+    </ul>
+  </section>
+
+  <!-- ЛОКАЦІЇ -->
+  <section class="section container info-block">
+    <h2 class="title-gradient">Локації сезону</h2>
+    <p class="info-text">
+      Водойми обрані так, щоб поєднати комфортні умови та спортивний інтерес. 
+      Кожна локація має свій характер, що робить сезон різноманітним і непередбачуваним.
+    </p>
+
+    <div class="lake-cards">
+      <div class="lake-card">Лелехівка</div>
+      <div class="lake-card">Пристань</div>
+      <div class="lake-card">Bounty</div>
+    </div>
+
+    <a href="lakes.html" class="btn btn--primary" style="margin-top:20px;">
+      Переглянути водойми детальніше
+    </a>
+  </section>
+
+  <!-- ЧОМУ STOLAR CARP -->
+  <section class="section container info-block">
+    <h2 class="title-gradient">Чому саме STOLAR CARP?</h2>
+
+    <ul class="advantages-list">
+      <li>Незалежне суддівство та чіткий регламент</li>
+      <li>Онлайн-результати 24/7: live-протоколи та рейтинг команд</li>
+      <li>Жеребкування секторів у відкритому форматі</li>
+      <li>Big Fish, окремі номінації та фінальний кубок</li>
+      <li>Дружня атмосфера та сильна спільнота учасників</li>
+    </ul>
+  </section>
+
+  <!-- ЗАКЛИК ДО УЧАСТІ -->
+  <section class="section container info-block call-to-action">
+    <h2 class="title-gradient">Готовий до сезону STOLAR CARP?</h2>
+    <p class="info-text">
+      Збери команду, обери снасті та подай заявку на участь. 
+      Попереду 5 етапів, фінал і шанс вписати свою команду в історію STOLAR CARP.
+    </p>
+
+    <a href="register.html" class="btn btn--accent btn-lg">Подати заявку на участь</a>
+  </section>
+
 </main>
 
 <!-- TikTok Section -->
-<section class="section container highlight" style="text-align:center; padding:60px 0;">
+<section class="section container highlight">
   <h2 class="title-gradient">🎬 Ми в TikTok</h2>
   <p>Дивись короткі відео з наших турнірів, зважувань та нагороджень!</p>
-  <a href="https://www.tiktok.com/@stolar.carp" class="btn btn--primary" target="_blank">
+  <a href="https://www.tiktok.com/@stolar.carp"
+     class="btn btn--primary"
+     target="_blank"
+     rel="noopener noreferrer">
     Перейти у TikTok
   </a>
 </section>
@@ -255,11 +434,12 @@
   <div class="container footer__row">
     <div>© 2025 STOLAR CARP · Львів</div>
     <div class="footer__links">
-      <a href="https://invite.viber.com/?g=8R04gUEhdVSnX6sr_DxGGGqAXTus0Ygh">Viber</a>
-      <a href="https://youtube.com/@dk-stolarcarp?si=H-BUK2msCiKXdcA9">YouTube</a>
+      <a href="https://invite.viber.com/?g=8R04gUEhdVSnX6sr_DxGGGqAXTus0Ygh" rel="noopener noreferrer" target="_blank">Viber</a>
+      <a href="https://youtube.com/@dk-stolarcarp?si=H-BUK2msCiKXdcA9" rel="noopener noreferrer" target="_blank">YouTube</a>
     </div>
   </div>
 </footer>
 
 </body>
 </html>
+```0
