--- a/index.html
+++ b/index.html
@@ -36,22 +36,21 @@
     }
 
     .hero-kicker-wrap{
-      position:relative;
-      display:inline-block;
-      padding-left:40px; /* місце під рибу */
-      margin-bottom:14px;
-    }
+  position: relative;
+  display: inline-block;
+  padding-left: 70px; /* компенсуємо велику рибку */
+}
 
-    .hero-fish-overlay{
-      position:absolute;
-      left:-10px;
-      top:50%;
-      transform:translateY(-50%);
-      width:70px;
-      height:70px;
-      z-index:10;
-      pointer-events:none;
-    }
+.hero-fish-overlay{
+  position: absolute;
+  left: -15px;         /* твоє красиве зміщення */
+  top: 50%;
+  transform: translateY(-50%);
+  width: 105px;        /* твій розмір */
+  height: 105px;
+  z-index: 10;
+  pointer-events: none;
+}
 
     .hero-kicker{
       display:inline-flex;
@@ -65,6 +64,7 @@
       background:rgba(0,0,0,.6);
       border:1px solid rgba(148,163,184,.5);
       color:#e5e7eb;
+      margin-bottom:14px;
     }
 
     .hero-kicker-text{
@@ -225,14 +225,18 @@
       padding:60px 0;
     }
 
-    @media (max-width:640px){
-      .hero-main{padding:60px 0 40px;}
-      .hero-fish-overlay{
-        width:52px;
-        height:52px;
-        left:-6px;
-      }
+    @media (max-width: 480px){
+  .hero-kicker-wrap{
+    padding-left: 50px;
+  }
+
+  .hero-fish-overlay{
+    width: 80px;
+    height: 80px;
+    left: -10px;
+  }
     }
+    
   </style>
 </head>
 <body class="home-page">
