--- a/index.html
+++ b/index.html
@@ -5,14 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>STOLAR CARP — офіційний сайт турнірів</title>
 
-  <!-- Meta / SEO -->
-  <meta name="description" content="STOLAR CARP — серія турнірів із коропової риболовлі в Україні. 5 етапів + Фінал, live-таблиці, рейтинг команд, прозорий регламент та чесна спортивна боротьба.">
-  <meta property="og:title" content="STOLAR CARP — офіційний сайт турнірів">
-  <meta property="og:description" content="Сезон 2026: 5 етапів + Фінал. Live-протоколи, рейтинг команд, Big Fish та архів подій.">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://stolarcarp.netlify.app/">
-  <meta property="og:image" content="https://stolarcarp.netlify.app/assets/og-image.jpg">
-
   <!-- Favicon & App Icon -->
   <link rel="icon" type="image/png" href="assets/favicon.png">
   <link rel="apple-touch-icon" href="assets/favicon.png">
@@ -35,23 +27,6 @@
       text-align:center;
     }
 
-    .hero-kicker-wrap{
-  position: relative;
-  display: inline-block;
-  padding-left: 70px; /* компенсуємо велику рибку */
-}
-
-.hero-fish-overlay{
-  position: absolute;
-  left: -15px;         /* твоє красиве зміщення */
-  top: 50%;
-  transform: translateY(-50%);
-  width: 105px;        /* твій розмір */
-  height: 105px;
-  z-index: 10;
-  pointer-events: none;
-}
-
     .hero-kicker{
       display:inline-flex;
       align-items:center;
@@ -65,6 +40,16 @@
       border:1px solid rgba(148,163,184,.5);
       color:#e5e7eb;
       margin-bottom:14px;
+      margin-left: 89px;
+    }
+
+    /* Іконка з рибою зліва в плашці */
+    .hero-kicker-icon{
+      width:20px;
+      height:20px;
+      border-radius:50%;
+      flex-shrink:0;
+      background:url('assets/fish-gold.png') center/cover no-repeat;
     }
 
     .hero-kicker-text{
@@ -120,6 +105,7 @@
       font-size:.98rem;
       border-radius:999px;
     }
+    /* акцентна кнопка для реєстрації */
     .btn--accent{
       background:linear-gradient(135deg,#f6c34c,#f28b2b);
       color:#111;
@@ -133,12 +119,6 @@
       margin-top:22px;
       font-size:.88rem;
       color:#9ca3af;
-    }
-
-    .hero-meta a{
-      color:#e5e7eb;
-      text-decoration:underline;
-      text-decoration-style:dotted;
     }
 
     .hero-season-card{
@@ -159,7 +139,28 @@
       font-size:.95rem;
     }
 
-    /* Інформаційні блоки головної */
+    @media (max-width:640px){
+      .hero-main{padding:60px 0 40px;}
+    }
+
+    .hero-kicker-wrap{
+      position: relative;
+      display: inline-block;
+    }
+
+    .hero-fish-overlay{
+      position: absolute;
+      left: -15px;      /* рибка заходить НА плашку */
+      top: 0%;
+      transform: translateY(-50%);
+      width: 105px;      /* РОЗМІР */
+      height: 105px;
+      z-index: 10;      /* ПОВЕРХ плашки */
+      pointer-events: none;
+    }
+
+    /* ---- НОВІ БЛОКИ ГОЛОВНОЇ ---- */
+
     .info-block{
       max-width:980px;
       margin:0 auto;
@@ -224,19 +225,6 @@
       text-align:center;
       padding:60px 0;
     }
-
-    @media (max-width: 480px){
-  .hero-kicker-wrap{
-    padding-left: 50px;
-  }
-
-  .hero-fish-overlay{
-    width: 80px;
-    height: 80px;
-    left: -10px;
-  }
-    }
-    
   </style>
 </head>
 <body class="home-page">
@@ -249,7 +237,7 @@
       <span class="logo__text">STOLAR CARP</span>
     </a>
     <nav class="nav" id="nav">
-      <a href="index.html" class="nav__link nav__link--active" aria-current="page">Головна</a>
+      <a href="index.html" class="nav__link nav__link--active">Головна</a>
       <a href="rules.html" class="nav__link">Регламент</a>
       <a href="register.html" class="nav__link">Реєстрація</a>
       <a href="live.html" class="nav__link">Live</a>
@@ -268,7 +256,7 @@
   <section class="section container hero-main">
 
     <div class="hero-kicker-wrap">
-      <img src="assets/fish-gold.png" class="hero-fish-overlay" alt="Логотип STOLAR CARP">
+      <img src="assets/fish-gold.png" class="hero-fish-overlay" alt="">
       <div class="hero-kicker">
         <span class="hero-kicker-text">СЕРІЯ КАРПОВИХ ТУРНІРІВ</span>
       </div>
@@ -277,16 +265,15 @@
     <h1 class="hero-title">STOLAR CARP</h1>
 
     <p class="hero-subtitle">
-      STOLAR CARP — серія турнірів із сучасного коропового спорту в Україні. 
-      Тут немає випадкових перемог: вирішують стабільність, витримка та командна 
-      тактика протягом усього сезону. 5 етапів + Фінал, сильні суперники 
-      та прозорий результат.
+      Створено для розвитку сучасного коропового спорту в Україні. Це змагання для тих, 
+      хто цінує чесну боротьбу, сильних суперників і прозорий результат. Тут важлива не одна риба, 
+      а стабільність, витримка та командна робота протягом сезону. Формується новий стандарт турнірів.
     </p>
 
     <div class="hero-tags">
       <span class="hero-tag">Сезон 2026 · 5 етапів + Фінал</span>
       <span class="hero-tag">Зони A · B · C</span>
-      <span class="hero-tag">Live-таблиці та онлайн-рейтинг</span>
+      <span class="hero-tag">Live-таблиці та рейтинг онлайн</span>
     </div>
 
     <div class="hero-cta">
@@ -302,18 +289,15 @@
     </div>
 
     <div class="hero-meta">
-      Локації сезону: 
-      <a href="lakes.html#lelekhivka">Лелехівка</a> · 
-      <a href="lakes.html#prystan">Пристань</a> · 
-      <a href="lakes.html#bounty">Bounty</a>.<br>
+      Локації сезону: Лелехівка · Пристань · Bounty.  
       Твій рівень. Твій трофей. Твоя перемога.
     </div>
 
     <div class="hero-season-card">
       <h2 class="title-gradient">🏆 Сезон STOLAR CARP 2026</h2>
       <p>
-        Слідкуй за всіма етапами та Фіналом в одному місці: live-таблиці, Big Fish, 
-        архів результатів і підсумковий рейтинг команд.
+        Слідкуй за всіма етапами та Фіналом в одному місці.
+        Архів, Big Fish та підсумковий рейтинг команд.
       </p>
       <a href="events/season-2026.html" class="btn btn--primary btn-lg">
         Переглянути сезон 2026
@@ -344,7 +328,7 @@
   <section class="section container info-block">
     <h2 class="title-gradient">Місія STOLAR CARP</h2>
     <p class="info-text">
-      Ми створюємо новий стандарт коропових турнірів в Україні: організований, 
+      Ми прагнемо створити новий стандарт коропових турнірів в Україні: організований, 
       прозорий та орієнтований на розвиток спільноти. Кожне змагання — це не лише боротьба 
       за кубок, а й зустріч однодумців на березі водойми.
     </p>
@@ -412,7 +396,7 @@
   <section class="section container info-block call-to-action">
     <h2 class="title-gradient">Готовий до сезону STOLAR CARP?</h2>
     <p class="info-text">
-      Збери команду, обери снасті та подай заявку на участь. 
+      Збери команду, підготуй снасті та подай заявку на участь. 
       Попереду 5 етапів, фінал і шанс вписати свою команду в історію STOLAR CARP.
     </p>
 
@@ -425,10 +409,7 @@
 <section class="section container highlight">
   <h2 class="title-gradient">🎬 Ми в TikTok</h2>
   <p>Дивись короткі відео з наших турнірів, зважувань та нагороджень!</p>
-  <a href="https://www.tiktok.com/@stolar.carp"
-     class="btn btn--primary"
-     target="_blank"
-     rel="noopener noreferrer">
+  <a href="https://www.tiktok.com/@stolar.carp" class="btn btn--primary" target="_blank">
     Перейти у TikTok
   </a>
 </section>
@@ -438,12 +419,11 @@
   <div class="container footer__row">
     <div>© 2025 STOLAR CARP · Львів</div>
     <div class="footer__links">
-      <a href="https://invite.viber.com/?g=8R04gUEhdVSnX6sr_DxGGGqAXTus0Ygh" rel="noopener noreferrer" target="_blank">Viber</a>
-      <a href="https://youtube.com/@dk-stolarcarp?si=H-BUK2msCiKXdcA9" rel="noopener noreferrer" target="_blank">YouTube</a>
+      <a href="https://invite.viber.com/?g=8R04gUEhdVSnX6sr_DxGGGqAXTus0Ygh">Viber</a>
+      <a href="https://youtube.com/@dk-stolarcarp?si=H-BUK2msCiKXdcA9">YouTube</a>
     </div>
   </div>
 </footer>
 
 </body>
 </html>
-```0
