--- a/index.html
+++ b/index.html
@@ -452,19 +452,17 @@
       STOLAR CARP відкритий для всіх, хто живе карпфішингом та цінує не лише перемогу, а й шлях до неї. Професійний досвід не є обов’язковим — головне бажання розвиватися, змагатися та поважати суперників.
 
 До участі запрошуються:
-• Команди з 2–3 учасників
-• Початківці та аматори
-• Досвідчені спортсмени
+
 • Клуби та рибальські об’єднання
-• Ті, хто готовий пройти сезон із 5 етапів та гранд-фіналом
+
     </p>
 
     <ul class="info-list">
-      <li>Команди з 2–3 учасників</li>
-      <li>Аматори, які хочуть пройти свій перший турнір</li>
-      <li>Досвідчені рибалки та спортивні команди</li>
-      <li>Клуби та об’єднання карпятників</li>
-      <li>Ті, хто готовий до сезону з 5 етапів і фінальної битви</li>
+      <li>• Команди з 2–3 учасників</li>
+      <li>• Початківці та аматори, які хочуть пройти свій перший турнір</li>
+      <li>• Досвідчені рибалки та спортивні команди</li>
+      <li>• Риболовні клуби та спільноти</li>
+      <li>• Ті, хто готовий пройти сезон із 5 етапів та гранд-фіналом</li>
     </ul>
   </section>
 
