--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
     </h2>
     <p class="info-text">
       Ми прагнемо створити новий стандарт коропових турнірів в Україні: організований, 
-      прозорий та створений для розвитку та популяризацію карпфішингу як спортивний вид спорту. Кожне змагання — це не лише боротьба 
+      прозорий та створений для розвитку та популяризацію карпфішингу як сучасний вид спорту. Кожне змагання — це не лише боротьба 
       за кубок, а й зустріч однодумців на березі водойми.
     </p>
 
