--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
 
     <p class="hero-subtitle">
       STOLAR CARP — це поєднання:
-чистої боротьби, дружньої атмосфери, спортивного драйву, командного духу та поваги до справжніх цінностей карпфішингу.
+спортивної боротьби, дружньої атмосфери, драйву, командного духу та поваги до справжніх цінностей карпфішингу.
 
     </p>
 
